<resources>
    <string name="app_name">BISM App</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>


    <!-- LOG IN SCREEN -->
    <string name="welcome">Welcome!</string>
    <string name="employee_id">Employee ID</string>
    <string name="remember_me">Remember me</string>
    <string name="login">Log In</string>
    <!-- TEAMS SCREEN -->
    <string name="team_progress_circle">Team Progress Circle</string>
    <string name="team_arrow">team arrow</string>
    <string name="team_a">Team A</string>
    <string name="your_teams">Your Teams</string>
    <string name="refresh_teams_screen">Refresh teams screen</string>
    <string name="create_a_new_team">Create a new team</string>
    <string name="new_team_name">New Team Name</string>
    <string name="enter_team_name_here">Enter Team Name Here</string>


    <!--ASK FOR HELP SCREEN-->
    <string name="team">Team</string>
    <string name="supervisor">Supervisor</string>
    <string name="search">  SEARCH...  </string>
    <string name="askheader">Ask for Help!</string>
    <string name="confirm">Ask for help from </string>

    <string name="title_activity_navigation">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="create_team">Create Team</string>
    <string name="dummy_name">Anna Banana Cherry</string>
    <string name="dummy_id">12345678</string>
    <string name="dummy_station">Station A</string>
    <string name="remove_a_member">Remove a member</string>
    <string name="set_daily_goal">Set daily goal:</string>
    <string name="enter_daily_goal">Enter daily goal...</string>
    <string name="add_team_members">Add team members:</string>
    <string name="enter_associate_name">Enter associate name...</string>
    <string name="enter_team_name">Enter Team Name</string>
    <string name="enter_member_info">Enter member info...</string>
    <string name="enter_names">Enter names...</string>
    <string name="has_made">Your team has made</string>
    <string name="no_team">You have not been added to a team</string>
    <string name="text_not_found">404: Text not found</string>

    <!--GIVE HELP SCREEN-->
    <string name="help_someone">Help Someone</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="create_or_delete_a_team">Create or delete a team</string>
    <string name="help">Help</string>
    <string name="at">at</string>



</resources>