<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/team_member_background"
            android:gravity="fill_horizontal|center_vertical"
            android:orientation="horizontal"
            android:padding="18dp">

            <TextView
                android:id="@+id/member_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:layout_weight="3"
                android:contentDescription="@string/team_progress_circle"
                android:ellipsize="end"
                android:fontFamily="@font/montserrat"
                android:maxLines="1"
                android:singleLine="true"
                android:text="@string/dummy_name"
                android:textColor="@color/black"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/member_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight=".40"
                android:ems="5"
                android:fontFamily="@font/montserrat"
                android:singleLine="true"
                android:text="@string/dummy_id"
                android:textColor="@color/bism_blue"
                android:textSize="24sp" />

            <ImageButton
                android:id="@+id/remove_member_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="3dp"
                android:layout_marginRight="3dp"
                android:background="@drawable/circle_red"
                android:contentDescription="@string/remove_a_member"
                app:srcCompat="@drawable/ic_clear_white_18dp" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>