<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/setDailyGoal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="10dp"
            android:text="@string/set_daily_goal"
            android:textColor="@color/black"
            android:textSize="32sp"
            tools:fontFamily="@font/montserrat" />

        <EditText
            android:id="@+id/enterDailyGoal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/textview_border"
            android:ems="10"
            android:fontFamily="@font/montserrat"
            android:hint="@string/enter_daily_goal"
            android:inputType="number"
            android:paddingLeft="15dp"
            android:textColor="@color/black"
            android:textSize="32sp" />

        <TextView
            android:id="@+id/addTeamMembers"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:paddingBottom="10dp"
            android:text="@string/add_team_members"
            android:textColor="@color/black"
            android:textSize="32sp"
            tools:fontFamily="@font/montserrat" />

        <EditText
            android:id="@+id/enterAssociateName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/textview_border"
            android:ems="10"
            android:fontFamily="@font/montserrat"
            android:hint="@string/enter_associate_name"
            android:inputType="number"
            android:paddingLeft="15dp"
            android:textColor="@color/black"
            android:textSize="32sp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>