<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/team_member_background"
        android:gravity="fill_horizontal|center_vertical"
        android:orientation="horizontal"
        android:paddingLeft="18dp"
        android:paddingTop="30dp"
        android:paddingRight="18dp"
        android:paddingBottom="30dp"
        android:weightSum="5">

        <TextView
            android:id="@+id/member_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="2dp"
            android:layout_marginRight="2dp"
            android:layout_weight="2"
            android:ellipsize="end"
            android:fontFamily="@font/montserrat"
            android:maxLines="1"
            android:singleLine="true"
            android:text="@string/dummy_name"
            android:textColor="@color/black"
            android:textSize="30sp"
            tools:layout_marginRight="5dp" />

        <TextView
            android:id="@+id/station"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="2dp"
            android:layout_marginLeft="2dp"
            android:layout_marginEnd="2dp"
            android:layout_marginRight="2dp"
            android:layout_weight="2"
            android:ems="4"
            android:fontFamily="@font/montserrat"
            android:gravity="right"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:singleLine="true"
            android:text="@string/dummy_id"
            android:textColor="@color/bism_blue"
            android:textSize="24sp" />

        <ImageButton
            android:id="@+id/remove_request_btn"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_marginStart="2dp"
            android:layout_marginLeft="2dp"
            android:layout_weight="1"
            android:background="@drawable/circle"
            android:contentDescription="@string/remove_a_member"
            app:srcCompat="@drawable/ic_baseline_thumb_up_24" />
    </LinearLayout>

</FrameLayout>